--- a/paper.tex
+++ b/paper.tex
@@ -434,7 +434,7 @@ Replacing $z$ with $t^{q^m} z$, this becomes
 \begin{align*}
 	\frac{1}{q^m-1}\sum_{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(z\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \theta' \left(t\right) \fieldCharacter_{2m}\left(\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) t\right).
 \end{align*}
-Since $\chi \circ \FieldNorm{2m}{1} \ne \theta'$, if $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) = 0$, we have that the inner sum over $t$ is zero. Hence, we may replace the sum over $z$ such that $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0$. Using the fact that $\theta'$ is trivial on $\multiplicativegroup{\finiteFieldExtension{m}}$, we have after replacing variables $t \mapsto \frac{t}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right)}$,
+Since $\chi \circ \FieldNorm{2m}{1} \ne \theta'$, if $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) = 0$, we have that the inner sum over $t$ is zero. Hence, we may reduce the sum over $z$ to $z$ such that $\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0$. Using the fact that $\theta'$ is trivial on $\multiplicativegroup{\finiteFieldExtension{m}}$, we have after replacing variables $t \mapsto \frac{t}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right)}$,
 \begin{align*}
 	\frac{1}{q^m-1}\sum_{\substack{t,z \in \multiplicativegroup{\finiteFieldExtension{2m}}\\
 	\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) \ne 0}} \chi^{-1}\left(\FieldNorm{2m}{1}\left(\frac{z}{\trace_{\finiteFieldExtension{2m} \slash \finiteFieldExtension{m}}\left(z\right) }\right)\right) \chi^{-1}\left(\FieldNorm{2m}{1}\left(t\right)\right) \theta' \left(t\right) \fieldCharacter_{2m}\left(t\right).
