--- a/paper.tex
+++ b/paper.tex
@@ -355,7 +355,7 @@ Write $P = L \ltimes N$, where $L$ is the Levi part of $P$ and $N$ is the unipot
 In order to make the computations more tolerable, it is beneficial to work with fully multiplicative functions. We introduce the doubling method gamma factors.
 
 Let $\chi \colon \multiplicativegroup{\finiteField} \to \multiplicativegroup{\cComplex}$ be a character. For an irreducible representation  $\tau$ of $\GL_k\left(\finiteField\right)$, define $$\dblGammaFactor{\tau}{\chi}{\fieldCharacter} = \GaussSumScalar{\tau \times \chi^{-1}}{\fieldCharacter} \GaussSumScalar{\Contragradient{\tau} \times \chi^{-1}}{\fieldCharacter}.$$
-For an irreducible representation $\pi$ of $G$, define the \emph{doubling method gamma factor} $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \centralCharacter{\pi}\left(-1\right) \frac{\dblGaussSumScalar{\pi}{\chi}}{\GaussSumScalar{\chi^2}{\fieldCharacter}^{\lfloor\frac{\dim \hermitianSpace}{2}\rfloor}}.$$
+For an irreducible representation $\pi$ of $G$, define the \emph{doubling method gamma factor} $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = \centralCharacter{\pi}\left(-1\right) \frac{\dblGaussSumScalar{\pi}{\chi}}{\GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor}}.$$
 Using this notation and using the multiplicativity property of Kondo's Gauss sum and \Cref{thm:multiplicativity-in-terms-of-gauss-sums}, we have the following multiplicativity property.
 
 \begin{theorem}
@@ -460,24 +460,38 @@ $$\sum_{\substack{x \in \finiteFieldExtension{2m}^1\\
 \subsubsection{Computation for Deligne--Lusztig characters}
 Combining the results of the previous sections with \Cref{prop:reduction-of-gauss-sum-to-torus}, we arrive at the following result.
 
-\begin{proposition}
+\begin{theorem}\label{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}
 	Suppose that $T \cong \prod_{j=1}^r \multiplicativegroup{\finiteFieldExtension{k_j}} \times \prod_{i=1}^s \finiteFieldExtension{2m_i}^1 \left[\times \{\pm 1\}\right]$ is a maximal torus of $G$. Suppose that $\theta \colon T \to \multiplicativegroup{\cComplex}$ is a character and that under the above isomorphism $\theta = \alpha_1 \times \dots \times \alpha_r \times \theta_1 \times \dots \times \theta_s \times \epsilon$, where  $\left[\epsilon \colon \left\{\pm 1\right\} \to \multiplicativegroup{\cComplex},\right]$ $\alpha_j \colon \multiplicativegroup{\finiteFieldExtension{k_j}} \to \multiplicativegroup{\cComplex}$ and $\theta_i \colon \finiteFieldExtension{2m_i}^1 \to \multiplicativegroup{\cComplex}$ are characters for every $i$ and $j$. Denote $$g_T\left(\theta, \fieldCharacter\right) = \prod_{i=1}^s \GaussSumCharacter{\theta'_i}{\chi^{-1}}{\fieldCharacter_{2m_i}} \cdot  \prod_{j=1}^r \GaussSumCharacter{\alpha_j}{\chi^{-1}}{\fieldCharacter_{k_j}} \GaussSumCharacter{\alpha_j^{-1}}{\chi^{-1}}{\fieldCharacter_{k_j}}.$$ Then
 	\begin{align*}
-		 \dblVirtualGaussSumScalar{R_{T, \theta}}{\chi} =& R_{T,\theta}\left(1\right) \GaussSumScalar{\chi^2}{\fieldCharacter}^{\lfloor\frac{\dim \hermitianSpace}{2}\rfloor} g_T\left(\theta, \fieldCharacter\right) \\
+		 \dblVirtualGaussSumScalar{R_{T, \theta}}{\chi} =& R_{T,\theta}\left(1\right) \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor} g_T\left(\theta, \fieldCharacter\right) \\
 		& \times \prod_{i=1}^s \theta_i\left(-1\right) \cdot \prod_{j=1}^r \alpha_j\left(-1\right) \\
 		& \left[\times \epsilon\left(-1\right) \chi\left(-2\right)\right],
 	\end{align*}
 	where the terms in $\left[\right]$ only appear in the odd orthogonal group case.
-\end{proposition}
+\end{theorem}
 \begin{proof}
-	This follows from the results mentioned above and from the formula $$R_T\left(1\right) = \varepsilon_{\algebraicGroup{G}} \varepsilon_{\algebraicGroup{T}} \frac{\grpIndex{G}{T}}{\sizeof{G}_p},$$ the fact that $$ \sizeof{\lieAlgebra} = \sizeof{G}_p^2 \cdot q^{\lfloor\frac{\dim \hermitianSpace}{2}\rfloor},$$
+	This follows from the results mentioned above and from the formula $$R_T\left(1\right) = \varepsilon_{\algebraicGroup{G}} \varepsilon_{\algebraicGroup{T}} \frac{\grpIndex{G}{T}}{\sizeof{G}_p},$$ the fact that $$ \sizeof{\lieAlgebra} = \sizeof{G}_p^2 \cdot q^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor},$$
 	the facts \begin{equation*}
-		\varepsilon_{\algebraicGroup{T}} = \left(-1\right)^r \text{\,\,\,\,\,\, and \,\,\,\,\,\,}  \varepsilon_{\algebraicGroup{G}} = \left(-1\right)^{\lfloor\frac{\dim \hermitianSpace}{2}\rfloor},
+		\varepsilon_{\algebraicGroup{T}} = \left(-1\right)^r \text{\,\,\,\,\,\, and \,\,\,\,\,\,}  \varepsilon_{\algebraicGroup{G}} = \left(-1\right)^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor},
 	\end{equation*}
 	and finally from $$\GaussSumScalar{\chi^2}{\fieldCharacter} = -\tau\left(\chi^2, \fieldCharacter\right).$$
 \end{proof}
 
 \subsubsection{Computation for Lusztig series}
+
+Using \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters} and results of Lusztig, we are able to determine $\dblGaussSumScalar{\pi}{\fieldCharacter}$ for any irreducible representation $\pi$ such that $\trace \pi$ appears with non-zero coefficient in $R_{T,\theta}$.
+
+\begin{theorem}
+	Let $T \subset G$ be a maximal torus and let $\theta \colon T \to \multiplicativegroup{\cComplex}$ be a character. Write $$R_{T,\theta} = \sum_{\pi} c_{\pi} \trace \pi,$$
+	where $\pi$ goes over all the irreducible representations of $G$ and $c_{\pi} \in \zIntegers$. Suppose that $\pi$ is an irreducible representation such that $c_{\pi} \ne 0$. Then $$\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = g_T\left(\theta, \fieldCharacter\right).$$
+\end{theorem}
+\begin{proof}
+	We will prove this by induction on $\dim \hermitianSpace$. Let us keep the notation as in \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}. If $\left(T,\theta\right)$ is in general position, then $\varepsilon_{\algebraicGroup{G}} \varepsilon_{\algebraicGroup{T}} R_{T,\theta} = \trace \pi$ and $$\dim \pi \cdot \dblGaussSumScalar{\pi}{\chi} = \dblVirtualGaussSumScalar{\trace \pi}{\chi} = \varepsilon_{\algebraicGroup{T}} \varepsilon_{\algebraicGroup{G}} \dblVirtualGaussSumScalar{R_{T,\theta}}{\chi}.$$ We also have in this case $$\centralCharacter{\pi}\left(-1\right) = \prod_{j=1}^r \alpha_j\left(-1\right) \cdot \prod_{i=1}^s \theta_j\left(-1\right).$$
+	Hence from \Cref{thm:computation-of-doubling-gauss-sum-scalar-for-deligne-lusztig-characters}, $$\dblGaussSumScalar{\pi}{\chi} = \frac{\dblVirtualGaussSumScalar{R_{T,\theta}}{\chi}}{R_{T,\theta}\left(1\right)} = \centralCharacter{\pi}\left(-1\right) g_T\left(\theta, \fieldCharacter\right) \GaussSumScalar{\chi^2}{\fieldCharacter}^{\left\lfloor\frac{\dim \hermitianSpace}{2}\right\rfloor},$$
+	which implies that $\dblGammaFactorSpace{\hermitianSpace}{\pi}{\chi}{\fieldCharacter} = g_T\left(\epsilon, \fieldCharacter\right)$.
+	
+	Suppose that $\left(T,\theta\right)$ is not in general position and that $\pi$ is such that $c_{\pi} \ne 0$. Fix an isomorphism $T^{\ast} \cong T$, where $T$ is the dual torus of $T$ and let $s$ be the image of $\theta$ under this isomorphism. Then $\pi$ belongs to the Lusztig series $\mathcal{E}\left(G, s\right)$. Suppose first that $\pi$ is not cuspidal. Then $\pi$ appears in a Harish--Chandra series of the form $\left(L, \sigma\right)$, where $L$ is a Levi subgroup of $G$ and where $\sigma$ belongs to the Lusztig--Series $\mathcal{E}\left(L, s\right)$. We may write $L \cong \GL_{t_1}\left(\finiteField\right) \times \dots \times \GL_{t_\ell}\left(\finiteField\right) \times G'$, where $G' = \IsometryGroup\left(\hermitianSpace'\right)$. By the multiplicativity property we have
+\end{proof}
 
 \subsection{Kloosterman type sums}
 
